--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/_ViewImports.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using BookPlatform.Web
-@using BookPlatform.Web.Models
+@using BookPlatform.Web.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
