--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/wwwroot/css/site.css
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/wwwroot/css/site.css
@@ -20,3 +20,13 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+a.book-title {
+    color: inherit;
+    text-decoration: none;
+}
+
+a.book-title:hover {
+    color: inherit;
+    text-decoration: underline;
+}
