style(views): expand and style information in book details view

--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/Details.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/Details.cshtml
@@ -4,12 +4,41 @@
     ViewData["Title"] = "Details";
 }
 
-<div class="col-md-2">
-    <div class="card mb-2 shadow-sm" style="width: 200px; height: 425px">
-        <img src="@Model.ImageUrl" class="card-img-top" alt="Cover Image" style="height: 300px; object-fit: cover;">
-        <div class="card-body">
-            <a class="book-title" asp-action="Details" asp-route-id="@Model.Id" class="card-title"><h6>@Model.Title</h6></a>
-            <p class="card-text">@Model.Author</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-3">
+            <div class="card mb-2 shadow-sm" style="width: 250px">
+                <img src="@Model.ImageUrl" class="card-img-top" alt="Cover Image" style="height: 400px; object-fit: cover;">                
+            </div>
+        </div>
+        <div class="col-md">
+            <h3 class="card-title">@Model.Title</h3>
+            <p class="card-subtitle modal-title">@Model.Author</p>
+            <div class="card mb-2 shadow-sm">                
+                <div class="card-body">
+                    <div class="container">
+                        <div class="row align-items-center">
+                            <svg class="col-auto" id="svgelem" width="50" height="50" xmlns="http://www.w3.org/2000/svg">
+                                <polygon points="10,1 4,18 19,6 1,6 16,18" fill="gold" />
+                            </svg>
+                            <p class="col">@Model.AverageRating.ToString("F2")</p>
+                        </div>
+                    </div>                    
+                    <p class="card-text">@Model.Description</p>
+                    <div class="card-footer">
+                                          
+                        @if (@Model.PublicationYear < 0){
+                            <p>First published in @Math.Abs(@Model.PublicationYear) BC</p>
+                        }
+                        else{
+                            <p>First published in @Model.PublicationYear</p>
+                        }                         
+                    </div>
+                </div>                
+            </div>            
         </div>
     </div>
 </div>
+
+
+
