style(views): modify layout and title page

--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Home/Index.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Home/Index.cshtml
@@ -2,8 +2,17 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <img src="/images/The-Two-Towers.jpg" style="height: 300px;" />
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <div class="col">
+        <div class="text-start align-items-center">
+            <h1 class="display-3">JOIN THE MOST ENGAGING<br> COMMUNITY FOR BOOK LOVERS TODAY.</h1>
+        </div>
+    </div>
 </div>
+
+@* <style>
+    body {
+        background-image: url("~/images/istockphoto-1288474318-612x612");
+        height: 100%;
+    }    
+</style> *@
