feat: add buttons on book details page

--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/Details.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/Details.cshtml
@@ -12,6 +12,11 @@
             </div>   
             <div class="col-md-12">
                 <div class="buttons" style="width: 100%">
+                    <div class="d-flex flex-column">
+                        <button type="button" class="btn btn-dark mb-2">Add to Reading List</button>
+                        <button type="button" class="btn btn-outline-dark mb-2">Reviews</button>
+                        <button type="button" class="btn btn-info mb-2">Quotes</button>
+                    </div>
                 </div>
             </div>
         </div>
