--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/wwwroot/css/site.css
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/wwwroot/css/site.css
@@ -30,3 +30,9 @@ a.book-title:hover {
     color: inherit;
     text-decoration: underline;
 }
+
+.btn:hover {
+    background-color: orange;
+    border-color: orange;
+    color: white;
+}
