--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/Index.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/Index.cshtml
@@ -11,10 +11,14 @@
     @foreach (var book in Model)
     {
         <div class="col-md-2">
-            <div class="card mb-2 shadow-sm" style="width: 200px; height: 425px">
-                <img src="@book.ImageUrl" class="card-img-top" alt="Cover Image" style="height: 300px; object-fit: cover;">
+            <div class="card mb-2 shadow-sm" style="width: 200px; height: 425px">                
+                <a class="book-title" asp-controller="Book" asp-action="Details" asp-route-id="@book.Id" class="card-title">
+                    <img src="@book.ImageUrl" class="card-img-top" alt="Cover Image" style="height: 300px; object-fit: cover;">
+                </a>
                 <div class="card-body">
-                    <a class="book-title" asp-controller="Book" asp-action="Details" asp-route-id="@book.Id" class="card-title"><h6>@book.Title</h6></a>
+                    <a class="book-title" asp-controller="Book" asp-action="Details" asp-route-id="@book.Id" class="card-title">
+                        <h6>@book.Title</h6>
+                    </a>
                     <p class="card-text">@book.Author</p>
                 </div>
             </div>
