fix: make website brand title redirect to browse all books

--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Shared/_Layout.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                     </ul>
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">BRAND NEW BOOK PLATFORM</a>
+                            <a class="navbar-brand" asp-area="" asp-controller="Book" asp-action="Index">BRAND NEW BOOK PLATFORM</a>
                         </li>
                     </ul>                    
                     <partial name="_LoginPartial" />
