style(buttons): exclude button classes

--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/wwwroot/css/site.css
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/wwwroot/css/site.css
@@ -31,7 +31,7 @@ a.book-title:hover {
     text-decoration: underline;
 }
 
-.btn:hover {
+.btn:not(.btn-link):not(.btn-lg):hover {
     background-color: orange;
     border-color: orange;
     color: white;
