--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/Details.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/Details.cshtml
@@ -13,7 +13,19 @@
             <div class="col-md-12">
                 <div class="buttons" style="width: 100%">
                     <div class="d-flex flex-column">
-                        <button type="button" class="btn btn-dark mb-2">Add to Reading List</button>
+                        @if (this.User?.Identity?.IsAuthenticated ?? false)
+                        {
+                            <div class="dropdown d-flex flex-column">
+                                <button type="button" class="btn btn-dark dropdown-toggle mb-2" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Add to Reading List
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="width: 100%">
+                                    <a class="dropdown-item text-center" asp-controller="ReadingList" asp-action="AddToReadingList" asp-route-readingStatus="1" asp-route-id="@Model.Id">Read</a>
+                                    <a class="dropdown-item text-center" asp-controller="ReadingList" asp-action="AddToReadingList" asp-route-readingStatus="2" asp-route-id="@Model.Id">Currently reading</a>
+                                    <a class="dropdown-item text-center" asp-controller="ReadingList" asp-action="AddToReadingList" asp-route-readingStatus="3" asp-route-id="@Model.Id">Want to read</a>
+                                </div>
+                            </div>
+                        }        
                         <button type="button" class="btn btn-outline-dark mb-2">Reviews</button>
                         <button type="button" class="btn btn-info mb-2">Quotes</button>
                     </div>
