--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/Details.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/Details.cshtml
@@ -68,9 +68,12 @@
             <h3>@Model.Title</h3>
             <p>@Model.Author</p>
             <div class="d-flex flex-row align-content-center">
-                <svg class="mx-0" width="19" height="19" xmlns="http://www.w3.org/2000/svg">
-                    <polygon points="10,1 4,18 19,6 1,6 16,18" fill="gold" />
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="gold" class="bi bi-star-fill" viewBox="0 0 16 16">
+                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
                 </svg>
+                @* <svg class="mx-0" width="19" height="19" xmlns="http://www.w3.org/2000/svg">
+                    <polygon points="10,1 4,18 19,6 1,6 16,18" fill="gold" />
+                </svg> *@
                 <p class="mx-2 my-0 py-0">@Model.AverageRating.ToString("F2")</p>
             </div>
             <div class="card mt-1 shadow-sm">
