--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Shared/_Layout.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Shared/_Layout.cshtml
@@ -20,11 +20,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Book" asp-action="Index">Browse</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ReadingList" asp-action="Index">My Books</a>
+                        </li>
                     </ul>
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="navbar-brand" asp-area="" asp-controller="Book" asp-action="Index">BRAND NEW BOOK PLATFORM</a>
-                        </li>
+                        </li>                        
                     </ul>                    
                     <partial name="_LoginPartial" />
                 </div>                
