build(architecture): move View models to Core layer and rename accordingly

--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/Index.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using BookPlatform.Web.ViewModels.Book
+﻿@using BookPlatform.Core.ViewModels.Book
 @model IEnumerable<BookIndexViewModel>
 @{
     ViewData["Title"] = "Browse Books";
