--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/ReadingList/Index.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/ReadingList/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using BookPlatform.Web.ViewModels.ReadingList;
+﻿@using BookPlatform.Core.ViewModels.ReadingList;
 @model IEnumerable<ReadingListViewModel>
 
 <h2>All</h2>
