--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/Details.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/Details.cshtml
@@ -1,6 +1,6 @@
 ﻿@using BookPlatform.Data.Models
 @using BookPlatform.Data.Repository.Interfaces
-@using BookPlatform.Web.ViewModels.Book
+@using BookPlatform.Core.ViewModels.Book
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.EntityFrameworkCore
 @using static BookPlatform.Common.OutputMessages.ReadingList;
