build(architecture): rename Services and adjust namespaces

--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/Details.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/Details.cshtml
@@ -1,8 +1,10 @@
-﻿@using BookPlatform.Data.Models
+﻿@using Microsoft.AspNetCore.Identity
+@using Microsoft.EntityFrameworkCore
+
+@using BookPlatform.Data.Models
 @using BookPlatform.Data.Repository.Interfaces
 @using BookPlatform.Core.ViewModels.Book
-@using Microsoft.AspNetCore.Identity
-@using Microsoft.EntityFrameworkCore
+
 @using static BookPlatform.Common.OutputMessages.ReadingList;
 @model BookDetailsViewModel
 
