--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/wwwroot/css/site.css
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/wwwroot/css/site.css
@@ -21,12 +21,14 @@ body {
   margin-bottom: 60px;
 }
 
-a.book-title {
+a.book-title, a.author, a.genre {
     color: inherit;
     text-decoration: none;
 }
 
-a.book-title:hover {
+a.book-title:hover,
+a.author:hover,
+a.genre:hover {
     color: inherit;
     text-decoration: underline;
 }
