style: adjust formatting

--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/ReadingList/Index.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/ReadingList/Index.cshtml
@@ -9,7 +9,7 @@
             <th class="col-1 text-center">Cover</th>
             <th class="col-2 text-wrap">Title</th>
             <th class="col-2 text-wrap">Author</th>
-            <th class="col-1">Rating</th>
+            <th class="col-1 align-content-center">My Rating</th>
             <th class="col-2">Status</th>
             <th class="col-1">Added On</th>
             <th class="col-1">Started On</th>
