--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/Details.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/Details.cshtml
@@ -52,7 +52,7 @@
                                     @readingListButtonText
                                 </button>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="width: 100%">
-                                    <a class="dropdown-item text-center" asp-controller="ReadingList" asp-action="AddToReadingList" asp-route-readingStatusId="1" asp-route-bookId="@Model.Id">Read</a>
+                                    <a id="loadReadingListPartial" class="dropdown-item text-center" asp-controller="ReadingList" asp-action="AddToReadingListRead" asp-route-readingStatusId="1" asp-route-bookId="@Model.Id">Read</a>
                                     <a class="dropdown-item text-center" asp-controller="ReadingList" asp-action="AddToReadingList" asp-route-readingStatusId="2" asp-route-bookId="@Model.Id">Currently reading</a>
                                     <a class="dropdown-item text-center" asp-controller="ReadingList" asp-action="AddToReadingList" asp-route-readingStatusId="3" asp-route-bookId="@Model.Id">Want to read</a>
                                 </div>
