--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/wwwroot/css/site.css
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/wwwroot/css/site.css
@@ -21,14 +21,15 @@ body {
   margin-bottom: 60px;
 }
 
-a.book-title, a.author, a.genre {
+a.book-title, a.author, a.genre, a.review-author {
     color: inherit;
     text-decoration: none;
 }
 
 a.book-title:hover,
 a.author:hover,
-a.genre:hover {
+a.genre:hover,
+a.review-author:hover {
     color: inherit;
     text-decoration: underline;
 }
