--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Shared/_Layout.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Shared/_Layout.cshtml
@@ -24,6 +24,12 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="ReadingList" asp-action="Index">My Books</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Friend" asp-action="Index">My Friends</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Discover" asp-action="Index">Discover</a>
+                            </li>
                         }                        
                     </ul>
                     <ul class="navbar-nav flex-grow-1">
