--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/Index.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/Index.cshtml
@@ -7,6 +7,8 @@
 
 <h2>Browse All Books</h2>
 
+<partial name="_SearchPartial" model="new BookIndexViewModel()" />
+
 <div class="row">
     @foreach (var book in Model)
     {
