--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/ReadingList/Index.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/ReadingList/Index.cshtml
@@ -18,7 +18,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var book in Model.OrderByDescending(b => b.DateAdded))
+        @foreach (var book in Model.OrderBy(b => b.DateAdded))
         {
             <tr>
                 <td>
