--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Character/Add.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Character/Add.cshtml
@@ -5,19 +5,11 @@
     <div class="row">
         <div class="col-md-9 col-sm-6 col-xs-12 min-vw-50">
             <form asp-action="Add" method="post">
+                <input type="hidden" name="bookId" value="@Model.BookId" />
                 <div>
                     <label for="Name">Name</label>
                     <input asp-for="Name" class="form-control" />
                     <span asp-validation-for="Name" class="text-danger"></span>
-                </div>
-                <div>
-                    <label asp-for="@Model.BookId" class="form-label-add-edit">Select Book</label>
-                    <div class="d-flex">
-                        <select asp-for="@Model.BookId" class="form-control" aria-required="true" asp-items="@(new SelectList(Model.Books, "Id", "Title"))">
-                            <option value="">Select Book...</option>
-                        </select>
-                        <span asp-validation-for="@Model.BookId" class="text-danger"></span>
-                    </div>
                 </div>
                 <button type="submit" class="btn btn-primary mt-2">Save</button>
             </form>
