--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
     </div>
 
     <div class="row g-4">
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="card shadow h-100 border-0">
                 <div class="card-body d-flex flex-column align-items-center text-center">
                     <i class="fas fa-users fa-3x text-primary mb-3"></i>
@@ -18,30 +18,17 @@
             </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="card shadow h-100 border-0">
                 <div class="card-body d-flex flex-column align-items-center text-center">
                     <i class="fas fa-film fa-3x text-secondary mb-3"></i>
-                    <h5 class="card-title">Manage Books</h5>
-                    <p class="card-text text-muted">Create, edit, and delete books</p>
+                    <h5 class="card-title">Manage Books and Characters</h5>
+                    <p class="card-text text-muted">Create, edit, and delete books, create and delete characters</p>
                     <a asp-area="Admin" asp-controller="BookManagement" asp-action="Index" class="btn btn-secondary mt-auto w-100">
-                        Go to Cinemas
+                        Go to Books
                     </a>
                 </div>
             </div>
-        </div>
-
-        <div class="col-md-4">
-            <div class="card shadow h-100 border-0">
-                <div class="card-body d-flex flex-column align-items-center text-center">
-                    <i class="fas fa-video fa-3x text-info mb-3"></i>
-                    <h5 class="card-title">Manage Movies</h5>
-                    <p class="card-text text-muted">Add and delete characters</p>
-                    <a asp-area="Admin" asp-controller="CharacterManagement" asp-action="Index" class="btn btn-info mt-auto w-100">
-                        Go to Movies
-                    </a>
-                </div>
-            </div>
-        </div>
+        </div>        
     </div>
 </div>
