--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Areas/Admin/Views/UserManagement/Index.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Areas/Admin/Views/UserManagement/Index.cshtml
@@ -13,11 +13,15 @@
 <div class="container mt-5">
     <h1 class="text-start mb-4">User Management</h1>
 
-    <table class="table table-bordered table-hover" style="width: 50%">
+    <form method="get" asp-area="Admin" asp-controller="Home" asp-action="Index" class="d-inline">
+        <button type="submit" class="btn btn-warning btn-sm" style="width: 150px;">Go back</button>
+    </form>
+
+    <table class="table table-bordered table-hover mt-4" style="width: 50%">
         <thead class="thead-light">
             <tr>
                 <th>Email</th>
-                <th>Actions</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
