feat: create index view for friends list

--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Friend/Index.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Friend/Index.cshtml
@@ -1,1 +1,34 @@
-﻿
+﻿@using BookPlatform.Core.ViewModels.ApplicationUser
+
+@model IEnumerable<ApplicationUserViewModel>
+
+<div class="container mt-5">
+    <h1 class="text-start mb-4">My Friends</h1>
+
+    <form method="get" asp-controller="Home" asp-action="Index" class="d-inline">
+        <button type="submit" class="btn btn-warning btn-sm" style="width: 150px;">Go back</button>
+    </form>
+
+    <table class="table table-bordered table-hover mt-4">
+        <thead class="thead-light">
+            <tr>
+                <th>User</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (ApplicationUserViewModel friend in Model)
+            {
+                <tr>
+                    <td>@friend.UserName</td>
+                    <td>
+                        <form method="get" asp-controller="Friend" asp-action="Remove" class="d-inline ms-2">
+                            <input type="hidden" name="email" value="@friend.Email" />
+                            <button type="submit" class="btn btn-primary btn-sm" style="width: 150px;">Remove friend</button>
+                        </form>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
