--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/_SearchPartial.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/_SearchPartial.cshtml
@@ -1,11 +1,7 @@
-﻿@using BookPlatform.Core.ViewModels.Book
-@model BookIndexViewModel
-
-<form asp-action="Search" method="get">
+﻿<form asp-action="Search" method="post">
     <div class="d-flex mb-4 align-items-center" style="width: 500px;">
         <div class="me-2 flex-grow-1">
-            <input asp-for="Title" class="form-control" style="height: 40px;" placeholder="Search book by title" />
-            <span asp-validation-for="Title" class="text-danger"></span>
+            <input name="title" class="form-control" style="height: 40px;" placeholder="Search book by title" />
         </div>
         <button type="submit" class="btn btn-outline-dark" style="height: 40px;">Search</button>
     </div>    
