--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Friend/Index.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Friend/Index.cshtml
@@ -6,8 +6,10 @@
 
 @inject UserManager<ApplicationUser> userManager
 
+<h1 class="text-start mb-4">My Friends</h1>
+
 <form asp-action="Find" method="get">
-    <div class="d-flex mb-4 align-items-center" style="width: 500px;">
+    <div class="d-flex align-items-center mb-4" style="width: 500px;">
         <div class="me-2 flex-grow-1">
             <input name="email" class="form-control" style="height: 40px;" placeholder="Search friends by email" />
         </div>
@@ -15,52 +17,53 @@
     </div>
 </form>
 
-<form method="get" asp-controller="Home" asp-action="Index" class="d-inline">
-    <button type="submit" class="btn btn-warning btn-sm" style="width: 150px;">Go back</button>
-</form>
+@if (Model.Any())
+{
+    <div class="container mt-5">        
+        <div class="row">
+            @foreach (ApplicationUserViewModel friend in Model)
+            {
+                <div class="col-md-2 align-content-center text-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-person-circle h1" viewBox="0 0 16 16">
+                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
+                        <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
+                    </svg>
+                    <h3>
+                        @friend.UserName
+                    </h3>
+                    @if (this.User?.Identity?.IsAuthenticated ?? false)
+                    {
+                        ApplicationUser? currentUser = await userManager.FindByNameAsync(this.User.Identity.Name!);
 
-@if(Model.Any()){
-    <div class="container mt-5">
-        <h1 class="text-start mb-4">My Friends</h1>  
-        <table class="table table-bordered table-hover mt-4">
-            <thead class="thead-light">
-                <tr>
-                    <th>User</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (ApplicationUserViewModel friend in Model)
-                {
-                    <tr>
-                        <td>@friend.UserName</td>
-                        <td>
-                            @if(this.User?.Identity?.IsAuthenticated ?? false){
-                                ApplicationUser? currentUser = await userManager.FindByNameAsync(this.User.Identity.Name!);
-
-                                @if (currentUser!.Friends.Any(fr => fr.UserName == friend.UserName))
-                                {
-                                    <form method="get" asp-controller="Friend" asp-action="Remove" class="d-inline ms-2">
-                                        <input type="hidden" name="email" value="@friend.Email" />
-                                        <button type="submit" class="btn btn-warning btn-sm" style="width: 150px;">Remove friend</button>
-                                    </form>
-                                }
-                                else
-                                {
-                                    <form method="get" asp-controller="Friend" asp-action="Add" class="d-inline ms-2">
-                                        <input type="hidden" name="email" value="@friend.Email" />
-                                        <button type="submit" class="btn btn-primary btn-sm" style="width: 150px;">Add friend</button>
-                                    </form>
-                                }
-                            }                                                        
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
+                        @if (currentUser!.Friends.Any(fr => fr.UserName == friend.UserName))
+                        {
+                            <a asp-controller="Friend" asp-action="Remove" asp-route-email="@friend.Email" class="btn btn-danger">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-dash" viewBox="0 0 16 16">
+                                    <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7M11 12h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1 0-1m0-7a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4" />
+                                    <path d="M8.256 14a4.5 4.5 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10q.39 0 .74.025c.226-.341.496-.65.804-.918Q8.844 9.002 8 9c-5 0-6 3-6 4s1 1 1 1z" />
+                                </svg>
+                                Remove friend
+                            </a>                            
+                        }
+                        else
+                        {                            
+                            <a asp-controller="Friend" asp-action="Add" asp-route-email="@friend.Email" class="btn btn-warning">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-add" viewBox="0 0 16 16">
+                                    <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0m-2-6a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4" />
+                                    <path d="M8.256 14a4.5 4.5 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10q.39 0 .74.025c.226-.341.496-.65.804-.918Q8.844 9.002 8 9c-5 0-6 3-6 4s1 1 1 1z" />
+                                </svg>
+                                Add friend
+                            </a>
+                        }
+                    }                    
+                </div>
+            }
+        </div>        
     </div>
 }
-else{
+else
+{
     <h3>No Results</h3>
 }
+
 
