feat: add discover page

--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Shared/_IndexFriendsPartial.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Shared/_IndexFriendsPartial.cshtml
@@ -1,6 +1,8 @@
 ﻿@using BookPlatform.Core.ViewModels.ApplicationUser
 @model ICollection<FriendBookViewModel>
 
+<h1>Friends' Books</h1>
+
 @if (Model.Any())
 {
     <div class="container mt-5">
