--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/ReadingList/Index.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/ReadingList/Index.cshtml
@@ -9,11 +9,10 @@
             <th class="col-1 text-center">Cover</th>
             <th class="col-2 text-wrap">Title</th>
             <th class="col-2 text-wrap">Author</th>
-            <th class="col-1 align-content-center">My Rating</th>
+            <th class="col-2">My Rating</th>
             <th class="col-2">Status</th>
-            <th class="col-1">Added On</th>
-            <th class="col-1">Started On</th>
-            <th class="col-1">Finished On</th>
+            <th class="col-1">Character</th>
+            <th class="col-1">Finished</th>
             <th class="col-1"></th>
         </tr>
     </thead>
@@ -39,29 +38,32 @@
                     @book.Rating
                 </td>
                 <td>@book.ReadingStatus</td>
-                <td>@book.DateAdded</td>
-                <td>@book.DateStarted</td>
+                <td>@book.FavoriteCharacter</td>
                 <td>@book.DateFinished</td>
                 <td>
-                    @if(book.ReadingStatusId != 1) {
-                        <a asp-controller="Book" asp-action="Details" asp-route-bookId="@book.BookId" class="btn btn-info">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen" viewBox="0 0 16 16">
-                                <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001m-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708z" />
+                    <div class="col d-flex justify-content-between">
+                        @if (book.ReadingStatusId != 1)
+                        {
+                            <a asp-controller="Book" asp-action="Details" asp-route-bookId="@book.BookId" class="btn btn-warning">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen" viewBox="0 0 16 16">
+                                    <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001m-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708z" />
+                                </svg>
+                            </a>
+                        }
+                        else
+                        {
+                            <a asp-controller="ReadingList" asp-action="Edit" asp-route-bookId="@book.BookId" asp-route-readingStatusId="@book.ReadingStatusId" class="btn btn-warning">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen" viewBox="0 0 16 16">
+                                    <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001m-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708z" />
+                                </svg>
+                            </a>
+                        }
+                        <a asp-controller="ReadingList" asp-action="Remove" asp-route-bookId="@book.BookId" class="btn btn-danger">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
+                                <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z" />
                             </svg>
                         </a>
-                    }
-                    else{
-                        <a asp-controller="ReadingList" asp-action="Edit" asp-route-bookId="@book.BookId" asp-route-readingStatusId="@book.ReadingStatusId" class="btn btn-info">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen" viewBox="0 0 16 16">
-                                <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001m-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708z" />
-                            </svg>
-                        </a>
-                    }                    
-                    <a asp-controller="ReadingList" asp-action="Remove" asp-route-bookId="@book.BookId" class="btn btn-info">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
-                            <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z" />
-                        </svg>
-                    </a>
+                    </div>                    
                 </td>
             </tr>
         }
