--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Shared/_Layout.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <as class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</as>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Discover">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Book" asp-action="Index">Browse</a>
